Add asdf and encourage-asdf-tools plugin

--- a/home/dot_Brewfile.tmpl
+++ b/home/dot_Brewfile.tmpl
@@ -1,8 +1,8 @@
-
 brew "gpg"
 brew "pinentry-mac"
 brew "starship"
 brew "fzf"
+brew "asdf"
 {{- if eq .machineType "personal" }}
 brew "mas"
 {{- end }}
