Add chatgpt to Brewfile

--- a/home/dot_Brewfile.tmpl
+++ b/home/dot_Brewfile.tmpl
@@ -9,6 +9,7 @@ brew "mas"
 
 cask "font-fira-code-nerd-font"
 {{- if eq .machineType "personal" }}
+cask "chatgpt"
 cask "1password-cli"
 cask "google-chrome"
 cask "docker"
