--- a/home/dot_Brewfile.tmpl
+++ b/home/dot_Brewfile.tmpl
@@ -3,6 +3,7 @@ brew "pinentry-mac"
 brew "starship"
 brew "fzf"
 brew "asdf"
+brew "gh"
 {{- if eq .machineType "personal" }}
 brew "mas"
 {{- end }}
