Fix gpg pin entry config

--- a/home/private_dot_gnupg/gpg-agent.conf.tmpl
+++ b/home/private_dot_gnupg/gpg-agent.conf.tmpl
@@ -3,4 +3,4 @@ default-cache-ttl 28800
 max-cache-ttl 28800
 
 # Use pinentry for macOS
-pinentry-program {{ output "brew" "--prefix" }}/bin/pinentry-mac
+pinentry-program {{ output "brew" "--prefix" | trim }}/bin/pinentry-mac
