--- a/home/dot_zshenv.tmpl
+++ b/home/dot_zshenv.tmpl
@@ -29,14 +29,21 @@ if [[ -z "$XDG_RUNTIME_DIR" ]]; then
     chmod 700 "$XDG_RUNTIME_DIR"
 fi
 
-# Configure ASDF
-export ASDF_CONFIG_FILE="$XDG_CONFIG_HOME/asdf/.asdfrc"
-export ASDF_DATA_DIR="$XDG_DATA_HOME/asdf"
+# Homebrew
+export HOMEBREW_NO_AUTO_UPDATE=1
+
+# Set Homebrew bundle file location
+export HOMEBREW_BUNDLE_FILE=$HOME/.config/homebrew/Brewfile
 
 # Add personal bin to PATH
 export PATH="$HOME/.local/bin:$PATH"
 
 {{ if eq .machineType "work" -}}
+
 # Set Java home
 export JAVA_HOME=/Library/Java/JavaVirtualMachines/amazon-corretto-8.jdk/Contents/Home
+
+# nvm
+export NVM_DIR="$HOME/.nvm"
+
 {{ end }}
